--- a/estilos/index.css
+++ b/estilos/index.css
@@ -77,6 +77,7 @@ input {
     border-radius: 10px;
     border: none;
     text-align: center;
+    font-size: 20px;
 }
 
 button {
@@ -107,5 +108,6 @@ button#apag:hover {
 
 div#res {
   color: orange;
+  font-size: 20px;
 }
 
