--- a/estilos/media-queries-all.css
+++ b/estilos/media-queries-all.css
@@ -332,3 +332,454 @@ div.calculadora {
     padding: 1px;
   }
 }
+
+
+
+
+
+@media (min-width: 1201px) and (orientation: landscape) {
+  body {
+    background-image: none;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.calculadora {
+    background-image: url(../background/fundo-background-smartphone-landscape.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 70vw;
+    height: auto;
+    border: none;
+    margin-top: 0px;
+  }
+
+  div.title {
+    background-color: black;
+  }
+
+  div.title > h1 {
+    background-color: none;
+    color: white;
+    border: none;
+    width: auto;
+    font-size: 50px;
+  }
+
+  div.title > img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+  }
+
+  div.input {
+    background-color: black;
+  }
+
+  div.input > label {
+    color: white;
+    font-size: 40px;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.input > input {
+    width: 100%;
+    height: 35px;
+  }
+
+  div.btn {
+    display: flex;
+    margin: 0 auto;
+    padding: 5px;
+  }
+
+  div.btn > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 70px;
+    font-size: 20px;
+    margin: 2px; 
+  }
+
+  div.btn > button:hover {
+    cursor: pointer;
+  }
+
+  div#res {
+    width: 100%;
+    height: 80px;
+    background-color: orange;
+    color: black;
+  }
+
+  section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   background-color: black;
+   margin-top: 10%;
+  }
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) and (orientation: landscape){
+  /*Desktop*/
+  body {
+    background-image: none;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.calculadora {
+    background-image: url(../background/fundo-background-smartphone-landscape.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 70vw;
+    height: auto;
+    border: none;
+    margin-top: 0px;
+  }
+
+  div.title {
+    background-color: black;
+  }
+
+  div.title > h1 {
+    background-color: none;
+    border: none;
+    width: auto;
+    font-size: 35px;
+  }
+
+  div.title > img {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+  }
+
+  div.input {
+    background-color: black;
+  }
+
+  div.input > label {
+    font-size: 30px;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.input > input {
+    width: 100%;
+    height: 30px;
+  }
+
+  div.btn {
+    display: flex;
+    margin: 0 auto;
+    padding: 5px;
+  }
+
+  div.btn > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    height: 70px;
+    font-size: 20px;
+    margin: 2px; 
+  }
+
+  div.btn > button:hover {
+    cursor: pointer;
+  }
+
+  div#res {
+    width: 400px;
+    height: 80px;
+    color: orange;
+  }
+
+  section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   background-color: black;
+   margin-top: 10%;
+  }
+}
+
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: Landscape) {
+  /*Grandes telas*/
+  body {
+    background-image: none;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.calculadora {
+    background-image: url(../background/fundo-background-smartphone-landscape.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 70vw;
+    height: auto;
+    border: none;
+    margin-top: 10px;
+  }
+
+  div.title {
+    background-color: black;
+  }
+
+  div.title > h1 {
+    background-color: none;
+    border: none;
+    width: auto;
+    font-size: 30px;
+  }
+
+  div.title > img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+  }
+
+  div.input {
+    background-color: black;
+  }
+
+  div.input > label {
+    font-size: 24px;
+    width: 20%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.input > input {
+    width: 100%;
+    height: 30px;
+  }
+
+  div.btn {
+    display: flex;
+    margin: 0 auto;
+    padding: 5px;
+  }
+
+  div.btn > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 50px;
+    font-size: 20px;
+    margin: 2px; 
+  }
+
+  div.btn > button:hover {
+    cursor: pointer;
+  }
+
+  div#res {
+    width: 400px;
+    height: 70px;
+    color: white;
+  }
+
+  section {
+  display: flex;
+   background-color: black;
+   margin-top: 10%;
+
+  }
+}
+
+@media (min-width: 481px) and (max-width: 768px) and (orientation: landscape) {
+   /*Tablet*/
+   body {
+    background-image: none;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.calculadora {
+    background-image: url(../background/fundo-background-smartphone-landscape.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 70vw;
+    height: auto;
+    border: none;
+    margin-top: 0px;
+  }
+
+  div.title {
+    background-color: black;
+  }
+
+  div.title > h1 {
+    background-color: none;
+    border: none;
+    width: auto;
+    font-size: 25px;
+  }
+
+  div.title > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+
+  div.input {
+    background-color: black;
+  }
+
+  div.input > label {
+    font-size: 20px;
+    width: 20%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.input > input {
+    width: 100%;
+    height: 30px;
+  }
+
+  div.btn {
+    display: flex;
+    margin: 0 auto;
+    padding: 5px;
+  }
+
+  div.btn > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 30px;
+    font-size: 20px;
+    margin: 2px; 
+  }
+
+  div.btn > button:hover {
+    cursor: pointer;
+  }
+
+  div#res {
+    width: 400px;
+    height: 50px;
+    color: white;
+  }
+
+  section {
+   background-color: black;
+   margin-top: 5px;
+   margin: auto;
+   margin-top: 0px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) and (orientation: landscape) {
+  body {
+    background-image: none;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.calculadora {
+    background-image: url(../background/fundo-background-smartphone-landscape.jpg);
+    background-position: center;
+    background-size: cover;
+    width: 70vw;
+    height: auto;
+    border: none;
+    margin-top: 0px;
+  }
+
+  div.title {
+    background-color: black;
+  }
+
+  div.title > h1 {
+    background-color: none;
+    border: none;
+    width: auto;
+    font-size: 25px;
+  }
+
+  div.title > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
+
+  div.input {
+    background-color: black;
+  }
+
+  div.input > label {
+    font-size: 20px;
+    width: 20%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  div.input > input {
+    width: 100%;
+    height: 30px;
+  }
+
+  div.btn {
+    display: flex;
+    margin: 0 auto;
+    padding: 5px;
+  }
+
+  div.btn > button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 30px;
+    font-size: 20px;
+    margin: 2px; 
+  }
+
+  div.btn > button:hover {
+    cursor: pointer;
+  }
+
+  div#res {
+    width: 400px;
+    height: 50px;
+    color: white;
+  }
+
+  section {
+   background-color: black;
+   margin-top: 5px;
+   margin: auto;
+   margin-top: 0px;
+  }
+}
