--- a/estilos/media-queries-all.css
+++ b/estilos/media-queries-all.css
@@ -505,6 +505,7 @@ div.calculadora {
   div#res {
     width: 400px;
     height: 80px;
+    background-color: black;
     color: orange;
   }
 
@@ -596,7 +597,8 @@ div.calculadora {
   div#res {
     width: 400px;
     height: 70px;
-    color: white;
+    background-color: white;
+    color: black;
   }
 
   section {
@@ -685,7 +687,8 @@ div.calculadora {
   div#res {
     width: 400px;
     height: 50px;
-    color: white;
+    background-color: white;
+    color: black;
   }
 
   section {
@@ -773,7 +776,8 @@ div.calculadora {
   div#res {
     width: 400px;
     height: 50px;
-    color: white;
+    background-color: white;
+    color: black;
   }
 
   section {
